--- a/template.html
+++ b/template.html
@@ -1,4 +1,3 @@
-Изабелла<!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -186,7 +185,7 @@
         <div class="row justify-content-center text-center align-items-center">
           <div class="col-md-8">
             <h2 style="font-size: 3rem;">проверено временем</h2>
-            <span class="sub-title" style="font-size: 2.5rem;">Уже {{years_with_you}} лет с вами</span>
+            <span class="sub-title" style="font-size: 2.5rem;">{{years_with_you}}</span>
           </div>
         </div>
       </div>
